--- a/build
+++ b/build
@@ -1,1 +1,2 @@
-CGO_ENABLED=0 GOOS=linux go build -a -tags netgo -ldflags '-w' .
+CGO_ENABLED=0 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags '-w' .
+docker-compose up
