--- a/build
+++ b/build
@@ -1,2 +1,3 @@
 CGO_ENABLED=0 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags '-w' .
+docker build -t danielhood/postgres1 .
 docker-compose up
