--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ postgres1:
   image: danielhood/postgres1
   links:
     - postgres-users:postgres
+  ports:
+    - "8080:8080"
 
 postgres-users:
   image: danielhood/postgres-users
